--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -31,8 +31,28 @@ a {
     cursor: pointer;
 }
 
-.p-filed {
-    margin-bottom: 1em;
+.p-form {
+    margin: 5px 0;
+    background: #d5edff;
+    padding: 20px;
+    border: 1px solid gray;
+}
+
+.p-grid {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.p-field {
+    margin-bottom: .6em;
+    padding: .5em;
+}
+
+.p-field label {
+    display: block;
+    margin-bottom: .1em;
 }
 
 .p-col-fixed {
