--- a/client/src/assets/less/navmenu.less
+++ b/client/src/assets/less/navmenu.less
@@ -60,11 +60,20 @@
                 background: #f5f7f9;
             }
 
-            i {
+            i, fa-icon {
                 margin: 15px;
+                display: inline-block;
             }
         }
     }
+}
+
+.rotate-90 {
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
 }
 
 .container.menu-layout-open {
