create db schemas

--- a/client/src/app/authentication/auth.component.html
+++ b/client/src/app/authentication/auth.component.html
@@ -78,6 +78,10 @@
                         <input class="ui-inputtext" name="first" required ngModel autocomplete="off">
                     </div>
                     <div class="row">
+                        <label class="p-col-fixed">{{Locales.middleName}}</label>
+                        <input class="ui-inputtext" name="middle" ngModel autocomplete="off">
+                    </div>
+                    <div class="row">
                         <label class="p-col-fixed">{{Locales.lastName}}*</label>
                         <input class="ui-inputtext" name="last" required ngModel autocomplete="off">
                     </div>
