--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -55,6 +55,10 @@ a {
     margin-bottom: .1em;
 }
 
+body .ui-chkbox-label {
+    display: inline-block;
+}
+
 .p-col-fixed {
     margin: 0 0.5em 0.1em 0;
     display: block;
