created user form component

--- a/client/src/app/admin/userform.component.html
+++ b/client/src/app/admin/userform.component.html
@@ -6,15 +6,15 @@
     </div>
     <div class="p-field p-md-3">
       <label for="firstname">{{Locales.firstname}}:</label>
-      <input class="ui-inputtext" formControlName="firstname" />
+      <input class="ui-inputtext" formControlName="first" />
     </div>
     <div class="p-field p-md-3">
       <label for="lastname">{{Locales.lastname}}:</label>
-      <input class="ui-inputtext" formControlName="lastname" />
+      <input class="ui-inputtext" formControlName="last" />
     </div>
     <div class="p-field p-md-3">
-      <label for="phonenumber">{{Locales.phonenumber}}:</label>
-      <input class="ui-inputtext" formControlName="phonenumber" />
+      <label for="phonenumber">{{Locales.cellphone}}:</label>
+      <input class="ui-inputtext" formControlName="phone" />
     </div>
     <div class="p-field p-md-2">
       <p-checkbox [label]="Locales.isActive" binary="true" formControlName="isActive"></p-checkbox>
