--- a/client/src/app/authentication/auth.component.less
+++ b/client/src/app/authentication/auth.component.less
@@ -10,6 +10,12 @@
     overflow: hidden;
 }
 
+.p-col-fixed {
+    margin: 0 0.5em 0.1em 0;
+    display: block;
+}
+
+
 .metars {
     text-align: center;
     padding: 30px 0 0;
