--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -1,7 +1,4 @@
-@topbar-height: 7vh;
-@footer-height: 5vh;
-@left-menu-width: 235px;
-@menu-close-speed: 0.3s;
+@import 'constants.less';
 
 html {
     height: 100%;
@@ -19,6 +16,21 @@ body {
     padding: 0;
     margin: 0;
     background-color: #f4f3f8;
+}
+
+.green {
+    color: #06d23c;
+}
+
+.red {
+    color: red;
+}
+
+.p-grid {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .ui-button {
