--- a/client/src/app/admin/userform.component.html
+++ b/client/src/app/admin/userform.component.html
@@ -1,25 +1,25 @@
 <form [formGroup]="frmGroup" class="p-form">
   <div class="ui-fluid p-grid">
-    <div class="p-field p-md-3">
+    <div class="p-md-3">
       <label for="username">{{Locales.username}}:</label>
       <input class="ui-inputtext" formControlName="username" />
     </div>
-    <div class="p-field p-md-3">
+    <div class="p-md-3">
       <label for="firstname">{{Locales.firstname}}:</label>
       <input class="ui-inputtext" formControlName="first" />
     </div>
-    <div class="p-field p-md-3">
+    <div class="p-md-3">
       <label for="lastname">{{Locales.lastname}}:</label>
       <input class="ui-inputtext" formControlName="last" />
     </div>
-    <div class="p-field p-md-3">
+    <div class="p-md-3">
       <label for="phonenumber">{{Locales.cellphone}}:</label>
       <input class="ui-inputtext" formControlName="phone" />
     </div>
-    <div class="p-field p-md-2">
+    <div class="p-md-2">
       <p-checkbox [label]="Locales.isActive" binary="true" formControlName="isActive"></p-checkbox>
     </div>
-    <div class="p-field p-md-2">
+    <div class="p-md-2">
       <p-checkbox [label]="Locales.resetPassword" binary="true" formControlName="resetPassword">
       </p-checkbox>
     </div>
