--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -18,6 +18,14 @@ body {
     background-color: #f4f3f8;
 }
 
+app-toast  {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 25rem;
+    z-index: 1020;
+}
+
 .green {
     color: #06d23c;
 }
