--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -18,12 +18,16 @@ body {
     background-color: #f4f3f8;
 }
 
-app-toast  {
+app-toast {
     position: fixed;
     top: 20px;
     right: 20px;
     width: 25rem;
     z-index: 1020;
+}
+
+a {
+    cursor: pointer;
 }
 
 .green {
