--- a/client/src/app/component/ft-table.component.html
+++ b/client/src/app/component/ft-table.component.html
@@ -4,17 +4,19 @@
     <colgroup>
       <col [style.width.px]="45" />
       <col *ngFor="let col of columns" [style.width.px]="col.width" />
+      <col [style.width.px]="45"/>
     </colgroup>
   </ng-template>
   <ng-template pTemplate="header">
     <tr>
       <th style="width: 3em; padding-left: 0; padding-right: 0; text-align: center;">
-        <button pButton class="ui-table-add-button" icon="pi pi-plus" style="font-size: 12px" (click)="onAddNewRow()"></button>
+        <button pButton icon="pi pi-plus" style="font-size: 12px" (click)="onAddNewRow()"></button>
       </th>
       <th *ngFor="let col of columns" pResizableColumn pSortableColumn="{{col.field}}">
         {{col.header}}
         <p-sortIcon field="{{col.field}}"></p-sortIcon>
       </th>
+      <th></th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-rowData let-expanded="expanded">
@@ -25,11 +27,12 @@
         </a>
       </td>
       <td *ngFor="let col of columns" class="ui-resizable-column" [style.text-align]="col.align" [title]="formatData(col, rowData, true)" [innerHTML]="formatData(col, rowData, false)"></td>
+      <td style="text-overflow: initial"><button pButton icon="pi pi-search" style="font-size: 10px" (click)="onMoreDetails()"></button></td>
     </tr>
   </ng-template>
   <ng-template pTemplate="rowexpansion" let-rowData>
     <tr>
-      <td [attr.colspan]="columns.length + 1">
+      <td [attr.colspan]="columns.length + 2">
         <div [ftTableFormProvider]="rowData" (onNotify)="formEventHandler($event);">
           <ng-container *ngComponentOutlet="expandFormTemplate"></ng-container>
         </div>
@@ -38,7 +41,7 @@
   </ng-template>
   <ng-template pTemplate="emptymessage">
     <tr>
-      <td [attr.colspan]="columns.length + 1" [innerHTML]="noData"></td>
+      <td [attr.colspan]="columns.length + 2" [innerHTML]="noData"></td>
     </tr>
   </ng-template>
 </p-table>
