--- a/client/src/assets/less/layout.less
+++ b/client/src/assets/less/layout.less
@@ -1,3 +1,11 @@
+.right {
+    float: right;
+}
+
+.right > * {
+    margin-left: 10px;
+}
+
 @media screen and (min-width: 768px) {
     .p-md-1,
     .p-md-2,
