--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -20,25 +20,25 @@
   <div class="wrap">
     <div class="left-menu">
       <ul class="nav-menu">
-        <li routerLink="../dashboard" routerLinkActive="active">
+        <li routerLink="../dashboard">
           <i class="pi pi-home"></i>{{Locales.dashboard}}
         </li>
-        <li routerLink="schedule" routerLinkActive="active">
+        <li routerLink="schedule">
           <i class="pi pi-calendar"></i>{{Locales.schedule}}
         </li>
-        <li routerLink="instructors" routerLinkActive="active">
+        <li routerLink="instructors">
           <fa-icon [icon]="faInstructor"></fa-icon>{{Locales.instructors}}
         </li>
-        <li routerLink="students" routerLinkActive="active">
+        <li routerLink="students">
           <i class="pi pi-users"></i>{{Locales.students}}
         </li>
-        <li routerLink="aircraft" routerLinkActive="active">
+        <li routerLink="aircraft">
           <fa-icon [icon]="faPlane" class="rotate-90"></fa-icon>{{Locales.aircraft}}
         </li>
-        <li routerLink="billing" routerLinkActive="active">
+        <li routerLink="billing">
           <i class="pi pi-money-bill"></i>{{Locales.billing}}
         </li>
-        <li routerLink="reports" routerLinkActive="active">
+        <li routerLink="reports">
           <i class="pi pi-chart-line"></i>{{Locales.reports}}
         </li>
       </ul>
