udate admin records

--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -44,7 +44,7 @@
       </ul>
     </div>
     <div class="main">
-      <ft-table sortField="last" [columns]="cols" [data]="users" dataKey="id" [noData]="Locales.noData"
+      <ft-table sortField="last" [columns]="cols" [data]="users" [noData]="Locales.noData"
         (onNotify)="eventTableHandler($event)" [expandFormTemplate]="tableExpandForm"></ft-table>
     </div>
   </div>
