--- a/client/src/app/admin/userform.component.html
+++ b/client/src/app/admin/userform.component.html
@@ -79,8 +79,8 @@
   <div>
     <p-button label="{{Locales.moreDetails}}"></p-button>
     <div class="right">
-      <p-button label="{{Locales.apply}}" *ngIf="AppUtils.isEditorAccess()"></p-button>
-      <p-button label="{{Locales.cancel}}" (click)="doCancel($event)"></p-button>
+      <p-button label="{{Locales.apply}}" *ngIf="AppUtils.isEditorAccess()" (click)="applyItem($event)"></p-button>
+      <p-button label="{{Locales.cancel}}" (click)="doCancel()"></p-button>
   </div>
   </div>
 </form>
