--- a/client/src/app/component/ft-table.component.less
+++ b/client/src/app/component/ft-table.component.less
@@ -5,8 +5,10 @@ td {
     text-overflow: ellipsis;
 }
 
-input[formcontrolname], input[readonly] {
+[formcontrolname] {
     height: 33px;
+    display: inline-block;
+    width: 100%;
 }
 
 input[readonly] {
