--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -62,6 +62,12 @@ a {
     box-sizing: border-box;
 }
 
+:not(form).ng-dirty.ng-invalid {
+    -moz-box-shadow: 0 0 3px #f00;
+    -webkit-box-shadow: 0 0 3px #f00;
+    box-shadow: 0 0 3px #f00;
+}
+
 .container {
     overflow-y: auto;
     position: relative;
